I#205 - e-source-selectable: Add annotations to developer comments

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/205